@@ -6,7 +6,7 @@ confdb.setupCount=6
 
 confdb0.dbSetup=HLT Development
 confdb0.dbType=oracle
-confdb0.dbHost=int9r2-v.cern.ch
+confdb0.dbHost=int9r1-v.cern.ch
 confdb0.dbPort=10121
 confdb0.dbName=int9r_lb.cern.ch
 confdb0.dbUser=cms_hlt_writer
@@ -20,7 +20,7 @@ confdb1.dbUser=cms_hlt_r
 
 confdb2.dbSetup=DAQ
 confdb2.dbType=oracle
-confdb2.dbHost=cmsonr5-v.cms
+confdb2.dbHost=cmsonr1-v.cms
 confdb2.dbPort=10121
 confdb2.dbName=cms_rcms.cern.ch
 confdb2.dbUser=cms_hlt_w
@@ -34,10 +34,10 @@ confdb3.dbUser=cms_hlt_w
 
 confdb4.dbSetup=TEST
 confdb4.dbType=oracle
-confdb4.dbHost=cmssm01
-confdb4.dbPort=1521
-confdb4.dbName=XE
-confdb4.dbUser=HLTDEV
+confdb4.dbHost=int2r1-v.cern.ch
+confdb4.dbPort=10121
+confdb4.dbName=int2r_lb.cern.ch
+confdb4.dbUser=cms_hlt_writer
 
 confdb5.dbSetup=MySQL Local
 confdb5.dbType=mysql
