@@ -1,3 +1,9 @@
+2008-03-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-21-00
+	* parser: serious bug fix!
+	* gui: import modules/instances
+
 2008-03-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-20-06
